--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -14,16 +14,7 @@ body.sessions.new {
         width: 948px;  
         margin: 5em auto;
         background: #fff;
-        h1 {
-          margin: 0;
-          padding-bottom: 1em;
-          font: {
-            size: xx-large;
-            weight: bold;
-          }
-        }
         .connect_container {
-          
           .facebook, .google {
             display: inline-block;
             width: 450px;
@@ -37,18 +28,17 @@ body.sessions.new {
                 background-repeat:no-repeat;
                 background-postion: left top;
                 font: {
-                  size: 1.4em;
+                  size: 1.2em;
                 }
-                 padding: 9px 20px 11px 60px;
+                 padding: 9px 20px 14px 60px;
               }
               input[value="Login with Facebook"] {  
                 background-image: url('social_facebook.png');
                 &:hover {
                   background-image: url('social_facebook.png');
                 }
-                
               }
-              input[value="Login with Google"] {  
+              input[value="Login with Google"] {
                 background-image: url('social_google.png');
                 &:hover {
                   background-image: url('social_google.png');
